[package]
name = "algorand-yew"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanhp978@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "support-wasm" }
